# EngageXPlatform

./: .gitignore  .replit  client  deploy.ps1  deploy.sh  docker-compose.yml  package-lock.json  package.json  pyproject.toml  replit.md  shared  tailwind.config.ts  tsconfig.json
.envs/: .env.example
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml
attached_assets/: Pasted--Package-Plans-Functional-Specification--1758276812151_1758276812155.txt  Pasted-EngageX-Overall-Platform-Report-1-Overview-EngageX-is-a-multi-tenant-email-marketing-and-engage-1758177172700_1758177172701.txt  Pasted-PATCH-https-ea19e9b3-14e6-4312-8546-6e57f572ef7f-00-2hnhorhfpx7br-riker-replit-dev-api-cards-a26a0-1758633641366_1758633641368.txt  Pasted-POST-https-ea19e9b3-14e6-4312-8546-6e57f572ef7f-00-2hnhorhfpx7br-riker-replit-dev-api-cards-500--1758626311796_1758626311798.txt  Pasted-POST-https-ea19e9b3-14e6-4312-8546-6e57f572ef7f-00-2hnhorhfpx7br-riker-replit-dev-api-invitations--1758891767562_1758891767565.txt
backend/: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  demo.json  fix_test_password.py  generate_password_hash.py  manage.py
backend/.envs/: .env.development  .env.example  .env.production
backend/config/: asgi.py  urls.py  wsgi.py
backend/core/: auth_views.py  models.py  (+14 more)
devops/: README.md  docker-compose.yml
docs/: README.md  architecture.md  backend.md  frontend.md
frontend/: drizzle.config.ts  tsconfig.json
monitoring/: README.md  docker-compose.yml
server/: django.ts  index.ts  proxy.ts  routes.ts  sendgrid.ts  storage.ts
shared/: schema.ts
(+207 files in other folders)
